k8s/nebula/apps/monitoring/grafana/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.skylab.fi
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: networking
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: networking
      sectionName: https

  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          namespace: monitoring
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
