k8s/nebula/apps/monitoring/grafana/app/int-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: grafana
    meta.helm.sh/release-namespace: monitoring
  name: grafana-int
  namespace: monitoring
spec:
  ingressClassName: internal-nginx
  rules:
    - host: grafana.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.skylab.fi
